--- a/templates/base.html
+++ b/templates/base.html
@@ -6,11 +6,12 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href=".static/main.css">
     <title>Transport App</title>
 </head>
 <body>
 
-<div class="main_menu">
+<div class="main">
     <a href="{% url 'base' %}"> Strona Główna </a><br>
     <a href=""> Zamówienia </a><br>
     <a href="{% url 'order_add_view' %}"> Dodaj zamówienie </a><br>
