--- a/templates/form.html
+++ b/templates/form.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% block content %}
 
-    <table>
+    <table class="table">
         <form method="post">
             {% csrf_token %}
             {{ form.as_table }}
