--- a/templates/base.html
+++ b/templates/base.html
@@ -6,19 +6,19 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href=".static/main.css">
+    <link rel="stylesheet" href="{% static 'main.css' %}">
     <title>Transport App</title>
 </head>
 <body>
-
 <div class="main">
-    <a href="{% url 'base' %}"> Strona Główna </a><br>
-    <a href=""> Zamówienia </a><br>
-    <a href="{% url 'order_add_view' %}"> Dodaj zamówienie </a><br>
-    <a href="{% url 'driver_add_view' %}"> Dodaj kierowce </a><br>
-    <a href="{% url 'car_add_view' %}"> Dodaj samochód </a><br>
-    <a href="{% url 'transport_add_view' %}"> Dodaj transport </a><br>
-    <a href=""> Ustawienia </a><br>
+    <ul class="mainMenu">
+        <li><a href="{% url 'base' %}"> Strona Główna </a></li>
+        <li><a href="{% url 'order_add_view' %}"> Dodaj zamówienie </a></li>
+        <li><a href="{% url 'driver_add_view' %}"> Dodaj kierowce </a> </li>
+        <li> <a href="{% url 'car_add_view' %}"> Dodaj samochód </a></li>
+        <li> <a href="{% url 'transport_add_view' %}"> Dodaj transport </a></li>
+        <li> <a href=""> Ustawienia </a></li>
+    </ul>
 </div>
 {% block content %}
 
