--- a/templates/form.html
+++ b/templates/form.html
@@ -1,14 +1,13 @@
 {% extends 'base.html' %}
 {% block content %}
-
     <table class="table">
         <form method="post">
             {% csrf_token %}
+            {{ form.media }}
             {{ form.as_table }}
             <tr>
-                <td colspan="2"><p><input type="submit"></p></td>
+                <td colspan="2"><p><input type="submit" value="Save"></p></td>
             </tr>
         </form>
     </table>
-
 {% endblock %}
