detail order view

--- a/templates/base.html
+++ b/templates/base.html
@@ -13,6 +13,7 @@
 <div class="mainMenu">
     <ul>
         <li><a href="{% url 'base' %}"> Strona Główna </a></li>
+        <li><a href="{% url 'order_list_view' %}">Lista Zamówień</a></li>
         <li><a href="{% url 'order_add_view' %}"> Dodaj zamówienie </a></li>
         <li><a href="{% url 'driver_add_view' %}"> Dodaj kierowce </a> </li>
         <li> <a href="{% url 'car_add_view' %}"> Dodaj samochód </a></li>
@@ -20,6 +21,15 @@
         <li> <a href=""> Ustawienia </a></li>
     </ul>
 </div>
+{#{% block base %}#}
+{#<div class="orders_cars">#}
+{#    <ul class="baseOrders">#}
+{#        {% for order in orders %}#}
+{#            <li> {{ order }} </li>#}
+{#        {% endfor %}#}
+{#    </ul>#}
+{#</div>#}
+{#{% endblock %}#}
 {% block content %}
 
 {% endblock %}
