--- a/TransportApp/static/main.css
+++ b/TransportApp/static/main.css
@@ -32,3 +32,17 @@
 .OrdersView {
     color: black
 }
+.button {
+  background-color: #4CAF50; /* Green */
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+    margin: 20px;
+}
+.button:hover {
+    background-color: #111;
+}
