--- a/templates/form.html
+++ b/templates/form.html
@@ -1,13 +1,14 @@
 {% extends 'base.html' %}
 {% block content %}
     <table class="table">
-        <form method="post">
+        <form id='my_form' method="post">
             {% csrf_token %}
             {{ form.media }}
             {{ form.as_table }}
-            <tr>
-                <td colspan="2"><p><input type="submit" value="Save"></p></td>
-            </tr>
+{#            <tr>#}
+{#                <td colspan="2"><p><input class='button' type="submit" value="Save"></p></td>#}
+{#            </tr>#}
         </form>
     </table>
+    <button class='button' form="my_form"> Zapisz</button>
 {% endblock %}
