--- a/TransportApp/static/main.css
+++ b/TransportApp/static/main.css
@@ -1,3 +1,7 @@
+body {
+    background-color: #3A506B ;
+}
+
 .mainMenu {
   list-style-type: none;
   margin: 0;
@@ -49,4 +53,6 @@
 .map {
     width: 1000px;
     height: 1000px;
+    margin: auto;
+    padding: 10px;
 }
