--- a/templates/form.html
+++ b/templates/form.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+<div class = 'list'>
 {% block content %}
     <table class="table">
         <form id='my_form' method="post">
@@ -9,3 +10,4 @@
     </table>
     <button class='button' form="my_form"> Zapisz</button>
 {% endblock %}
+</div>
