--- a/templates/list_view.html
+++ b/templates/list_view.html
@@ -1,7 +1,9 @@
-<ul class="list_view">
-    {% for item in object_list %}
-        <li class="list_item">{{ item }}
-        <a href="{{ item.get_delete_url }}"> Usuń </a>
-        </li>
-    {% endfor %}
-</ul>
+<div class ='list'>
+    <ul class="list_view">
+        {% for item in object_list %}
+            <li class="list_item">{{ item }}
+            <a href="{{ item.get_delete_url }}"> Usuń </a>
+            </li>
+        {% endfor %}
+    </ul>
+</div>
