--- a/TransportApp/templates/detail_order.html
+++ b/TransportApp/templates/detail_order.html
@@ -22,7 +22,7 @@
     </ul>
 </div>
 <div class="coint">
-    <div>
+    <div class="detail_order_coint">
         <p>Imię i nazwisko:</p>
         <h1>{{ orders.client }}</h1>
         <p>Adres Dostawy:</p>
