--- a/TransportApp/static/main.css
+++ b/TransportApp/static/main.css
@@ -57,9 +57,8 @@ body {
     background-color: #0d1b2a;
 }
 .map {
-    width:1200px;
-    margin: auto;
-    padding: 10px;
+    width:1000px;
+    margin: 0;
 }
 .form_view {
     margin: auto;
@@ -96,12 +95,61 @@ a {
 }
 .coint li:hover {
     background-color: #fefae0;
-    /*margin: 10px;*/
-    /*padding: 10px;*/
-    /*list-style-type: none;*/
 }
 .detail_order_coint {
     background-color: #fefae0;
     padding: 10px;
     text-align: center;
+}
+.login {
+    width: 300px;
+    padding: 40px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background: #191919;
+    text-align: center;
+    border-radius: 20%;
+}
+.password, .username {
+    background: none;
+    display: block;
+    margin: 20px auto;
+    text-align: center;
+    border: 2px solid #3498db;
+    padding: 14px 10px;
+    width: 200px;
+    outline: none;
+    color: white;
+    border-radius: 24px;
+    transition: 0.25s;
+}
+.login h1{
+    color: white;
+    text-transform: uppercase;
+    font-weight: 500;
+}
+.password:focus, .username:focus{
+    width: 280px;
+    border-color: #2ecc71;
+}
+.login input[type='submit']{
+    background: none;
+    display: block;
+    margin: 20px auto;
+    text-align: center;
+    border: 2px solid #2ecc71;
+    padding: 14px 40px;
+    outline: none;
+    color: white;
+    border-radius: 24px;
+    transition: 0.25s;
+    cursor: pointer;
+}
+.login input[type='submit']:hover{
+    background: #2ecc71;
+}
+.login_body {
+    background-color: #22223b;
 }
