--- a/templates/login.html
+++ b/templates/login.html
@@ -7,6 +7,7 @@
     <title>Transport App by Wiktor Karaszewicz</title>
 </head>
 <body class="login_body">
+{#<img src="{% static 'FinalProjectLogo.png' %}" alt="SmartTrans Logo">#}
 <form class="login" method="post">
     {% csrf_token %}
     <h1> Login </h1>
