--- a/register/templates/registration/login.html
+++ b/register/templates/registration/login.html
@@ -7,13 +7,13 @@
     <title>Transport App by Wiktor Karaszewicz</title>
 </head>
 <body class="login_body">
-{#<img src="{% static 'FinalProjectLogo.png' %}" alt="SmartTrans Logo">#}
 <form class="login" method="post">
     {% csrf_token %}
     <h1> Login </h1>
-    <input class='username' type="text" name="" placeholder="username">
-    <input class='password' type="password" name="">
+    {{ form.media }}
+    {{ form.as_p}}
     <input type="submit" name="" value="Login">
+    <p class="login_register">Create a new account <a href="/register">Here</a></p>
 </form>
 </body>
 </html>
