Registration form, not creating user

--- a/TransportApp/static/main.css
+++ b/TransportApp/static/main.css
@@ -128,6 +128,12 @@ a {
 .login label{
     display: none;
 }
+.login ul{
+    display: none;
+}
+.login span{
+    display: none;
+}
 .login h1{
     color: white;
     text-transform: uppercase;
