--- a/register/templates/registration/register.html
+++ b/register/templates/registration/register.html
@@ -1,10 +1,19 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <link rel="stylesheet" href="{% static 'main.css' %}">
+    <title>Transport App by Wiktor Karaszewicz</title>
 </head>
-<body>
-
+<body class="login_body">
+<form class="login" method="post">
+    {% csrf_token %}
+    <h1> Register </h1>
+    {{ form.media }}
+    {{ form.as_p}}
+    <input type="submit" name="" value="Register">
+    <p class="login_register">Already have an account? <a href="{% url 'login' %}">Login</a></p>
+</form>
 </body>
 </html>
