--- a/templates/base.html
+++ b/templates/base.html
@@ -23,7 +23,7 @@
 </div>
 <div class="coint">
     {% if orders %}
-    <div>
+    <div class="base_orders">
         <h3>Nie zrealizowane zamówienia:</h3>
         <ul>
             {% for order in orders %}
