--- a/register/templates/registration/login.html
+++ b/register/templates/registration/login.html
@@ -7,6 +7,9 @@
     <title>Transport App by Wiktor Karaszewicz</title>
 </head>
 <body class="login_body">
+<div class="logo">
+    <img src="{% static 'FinalProjectLogo.png' %}" alt="Logo">
+</div>
 <form class="login" method="post">
     {% csrf_token %}
     <h1> Login </h1>
