--- a/templates/base.html
+++ b/templates/base.html
@@ -31,7 +31,7 @@
                 <a href="{{ order.get_absolute_url }}">
                     <li class="base_view_orders"> ID {{ order.id }} <b>{{ order.client }}
                     </b> Telefon: {{ order.phone_number }}<br>
-                    {{ order.delivery_address }}</li>
+                    {{ order.delivery_address }} {{ order.delivery_day }}</li>
                 </a>
 
             {% endfor %}
