--- a/templates/list_view.html
+++ b/templates/list_view.html
@@ -1,9 +1,9 @@
 <div class ='list'>
     <ul class="list_view">
         {% for item in object_list %}
-            <li class="list_item"><a href="{{ item.get_absolute_url }}">{{ item }}</a>
-            <a href="{{ item.get_delete_url }}"> Usuń </a>
-            </li>
+            <a href="{{ item.get_absolute_url }}">
+            <li class="list_item">{{ item }}</li>
+            </a>
         {% endfor %}
     </ul>
 </div>
