Adding overflow on base view

--- a/TransportApp/static/main.css
+++ b/TransportApp/static/main.css
@@ -225,3 +225,10 @@ a {
 .logo img{
     width: 400px;
 }
+.base_orders ul {
+    height: 674px;
+    overflow: auto;
+}
+.base_orders ul li {
+    margin: 10px;
+}
