--- a/TransportApp/templates/orders_list_view.html
+++ b/TransportApp/templates/orders_list_view.html
@@ -34,7 +34,7 @@
             </ul>
         </div>
         <div class="in_progress_orders">
-            <h2 class="list_orders_h2">Transport defined</h2>
+            <h2 class="list_orders_h2">Zdefiniowano Transport</h2>
             <ul>
             {% for order in in_process_orders %}
                 <a href="{{ order.get_absolute_url }}">
