--- a/TransportApp/templates/detail_order.html
+++ b/TransportApp/templates/detail_order.html
@@ -53,6 +53,15 @@
         <a href="{{ order.get_modify_url }}">
         <button class="ord_det_edit">Edytuj zamówienie</button>
         </a>
+        <div class="detail_order_buttons">
+            <h3>Zmień Status</h3>
+            <a href="{% url 'TransportDefined' pk=order.id %}"><button>Transport Zdefiniowany</button></a>
+            <a href="{% url 'DoneOrder' pk=order.id %}"><button>Zrealizowane</button></a>
+            <a href="{% url 'CancelOrder' pk=order.id %}"><button>Anulowane</button></a>
+            <a href="{% url 'NewOrder' pk=order.id %}"><button>Nowe</button></a>
+        </div>
+        <br>
+        <footer><b> Status zamówienia:</b> <br> <h3>{{ order.get_status_display }}</h3> </footer>
     </div>
 </div>
 
