--- a/TransportApp/templates/modify_order.html
+++ b/TransportApp/templates/modify_order.html
@@ -15,7 +15,7 @@
         <li><a href="{% url 'driver_add_view' %}"> Dodaj kierowce </a></li>
         <li><a href="{% url 'car_add_view' %}"> Dodaj samochód </a></li>
         <li><a href="{% url 'transport_add_view' %}"> Dodaj transport </a></li>
-        <li><a href=""> Ustawienia </a></li>
+        <li><a href="{% url 'settings' %}"> Ustawienia </a></li>
     </ul>
 </div>
 <div class = 'list'>
