--- a/TransportApp/templates/detail_order.html
+++ b/TransportApp/templates/detail_order.html
@@ -38,7 +38,7 @@
         <h4>{{ order.get_status_display }}</h4>
     </div>
     {% if my_map %}
-        <div class ="map">
+        <div class="map">
             {{ my_map|safe }}
         </div>
     {% endif %}
@@ -53,19 +53,32 @@
 
         </form>
         <a href="{{ order.get_modify_url }}">
-        <button class="ord_det_edit">Edytuj zamówienie</button>
+            <button class="ord_det_edit">Edytuj zamówienie</button>
         </a>
         <div class="detail_order_buttons">
             <h3>Zmień Status</h3>
-            <a href="{% url 'TransportDefined' pk=order.id %}"><button>Transport</button></a>
-            <a href="{% url 'DoneOrder' pk=order.id %}"><button>Zrealizowane</button></a>
-            <a href="{% url 'CancelOrder' pk=order.id %}"><button>Anulowane</button></a>
-            <a href="{% url 'NewOrder' pk=order.id %}"><button>Nowe</button></a>
+            <div>
+                <a href="{% url 'TransportDefined' pk=order.id %}">
+                    <button>Transport</button>
+                </a>
+                <a href="{% url 'DoneOrder' pk=order.id %}">
+                    <button>Zrealizowane</button>
+                </a>
+            </div>
+            <div style = "margin-top: 5px">
+                <a href="{% url 'CancelOrder' pk=order.id %}">
+                    <button>Anulowane</button>
+                </a>
+                <a href="{% url 'NewOrder' pk=order.id %}">
+                    <button>Nowe</button>
+                </a>
+            </div>
         </div>
         <br>
-        <footer><b> Status zamówienia:</b> <br> <h3>{{ order.get_status_display }}</h3> </footer>
+        <footer><b> Status zamówienia:</b> <br>
+            <h3>{{ order.get_status_display }}</h3></footer>
     </div>
 </div>
 
-    </body>
+</body>
 </html>
