--- a/TransportApp/static/main.css
+++ b/TransportApp/static/main.css
@@ -372,3 +372,44 @@ a {
 .base_orders {
     width: 40%;
 }
+.filter_form {
+    display: inline;
+}
+.filter ul{
+    text-align: center;
+    margin: auto;
+}
+.filter li {
+    background-color: #219ebc;
+    border-radius: 10px;
+    margin: 10px auto;
+    text-align: center;
+    list-style-type: none;
+    font-size: 18px;
+    height: 30px;
+    width: 800px;
+}
+.filter {
+    text-align: center;
+}
+.filter_view {
+    text-align: center;
+}
+.filter li:hover {
+    background-color: #fefae0;
+}
+.filter_view form p{
+    display: inline-block;
+}
+.filter_view button {
+    width: 70px;
+    height: 35px;
+    background-color: #3498db;
+    border-color: #3498db;
+    color: white;
+}
+.filter_view button:hover {
+    background-color: #2ecc71;
+    border-color: #2ecc71;
+    color: #22223b;
+}
