--- a/templates/base.html
+++ b/templates/base.html
@@ -21,32 +21,34 @@
         <li><a href="{% url 'settings' %}"> Ustawienia </a></li>
     </ul>
 </div>
-<div class="coint">
+{% block base %}
+    <div class="coint">
     {% if orders %}
         <div class="base_orders">
-        <h3>Nie zrealizowane zamówienia:</h3>
-        <ul>
-            {% for order in orders %}
+            <h3>Nie zrealizowane zamówienia:</h3>
+            <ul>
+                {% for order in orders %}
 
-                <a href="{{ order.get_absolute_url }}">
-                    <li class="base_view_orders"> ID {{ order.id }} <b>{{ order.client }}
-                    </b> Telefon: {{ order.phone_number }}<br>
-                    {{ order.delivery_address }} {{ order.delivery_day }}</li>
-                </a>
+                    <a href="{{ order.get_absolute_url }}">
+                        <li class="base_view_orders"> ID {{ order.id }} <b>{{ order.client }}
+                        </b> Telefon: {{ order.phone_number }}<br>
+                            {{ order.delivery_address }} {{ order.delivery_day }}</li>
+                    </a>
 
-            {% endfor %}
-        </ul>
-    </div>
+                {% endfor %}
+            </ul>
+        </div>
     {% endif %}
-{% if my_map %}
-    <div class ="map">
-        {{ my_map|safe }}
-    </div>
-{% endif %}
-<div class="form_view">
-{% block content %}
+    {% if my_map %}
+        <div class="map">
+            {{ my_map|safe }}
+        </div>
+    {% endif %}
 {% endblock %}
+<div class="form_view">
+    {% block content %}
+    {% endblock %}
 </div>
 </div>
-    </body>
+</body>
 </html>
