Navigation bar update

--- a/TransportApp/templates/delete_order.html
+++ b/TransportApp/templates/delete_order.html
@@ -12,9 +12,7 @@
         <li><a href="{% url 'base' %}"> Strona Główna </a></li>
         <li><a href="{% url 'order_list_view' %}">Lista Zamówień</a></li>
         <li><a href="{% url 'order_add_view' %}"> Dodaj zamówienie </a></li>
-        <li><a href="{% url 'driver_add_view' %}"> Dodaj kierowce </a></li>
-        <li><a href="{% url 'car_add_view' %}"> Dodaj samochód </a></li>
-        <li><a href="{% url 'transport_add_view' %}"> Dodaj transport </a></li>
+        <li><a href="{% url 'order_filter' %}"> Filtruj zamówienia </a></li>
         <li><a href="{% url 'settings' %}"> Ustawienia </a></li>
     </ul>
 </div>
