Style colors change

--- a/TransportApp/templates/delete_order.html
+++ b/TransportApp/templates/delete_order.html
@@ -26,6 +26,10 @@
         </form>
     </table>
     <button class='button' form="my_form"> Usuń </button>
+    <div class="delete_under_form">
+    <p> Usuwasz zamówienie:</p>
+    <h3>{{ orders.id }} {{ orders }}</h3>
+    </div>
 {% endblock %}
 </div>
 </body>
