--- a/TransportApp/static/main.css
+++ b/TransportApp/static/main.css
@@ -448,12 +448,15 @@ a {
 }
 .delete_order {
     margin-top: 10px;
-    width: 100px;
+    width: 90px;
     background-color: darkred;
     border-color: darkred;
     color: #fefae0;
 }
 .delete_order:hover {
     background-color: black;
+    color: white;
+}
+.delete_under_form{
     color: white;
 }
