--- a/templates/settings.html
+++ b/templates/settings.html
@@ -92,6 +92,6 @@
         </div>
     </div>
     <div class="no_flex">
-        <p> Tutaj może kiedyś dodam statystyke z mapy jednakże było by to płatne </p>
+        <p> There will be some statistic data once I decite to use different map </p>
     </div>
 </div>
